--- a/my-app/src/components/LoginModal/LoginModal.scss
+++ b/my-app/src/components/LoginModal/LoginModal.scss
@@ -1,5 +1,5 @@
-.outerModal{
-    position: absolute;
+.outerModal {
+    position: fixed;
     height: 100vh;
     width: 100vw;
     top: 0;
@@ -8,10 +8,83 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
 
-.innerModal{
-    height: 20px;
-    width: 20px;
-    background-color: white;
+    .innerModal {
+        padding: 40px 24px;
+        background: #27292D;
+        border-radius: 8px;
+        border: 2px solid rgba(white, 0.1);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: white;
+        min-width: 463px;
+        box-sizing: border-box;
+
+        .subHeading {
+            color: #6B6C70;
+            font-size: 14px;
+            line-height: 18px;
+            margin-bottom: 8px;
+        }
+
+        .heading {
+            font-size: 18px;
+            line-height: 22px;
+        }
+
+        .inputs {
+            margin-top: 45px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            row-gap: 16px;
+
+            .inputWrap {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+
+                label {
+                    font-size: 14px;
+                    line-height: 18px;
+                    color: #C5C7CA;
+                    margin-bottom: 10px;
+                }
+
+                input {
+                    background-color: transparent;
+                    height: 43px;
+                    border: 1.5px solid #35373B;
+                    border-radius: 4px;
+                    padding: 12px;
+                    box-sizing: border-box;
+                    color: white;
+                    &:focus{
+                        outline: none;
+                    }
+                }
+            }
+        }
+        .button{
+            color: white;
+            background-color: #4A96FF;
+            padding: 12px;
+            border-radius: 4px;
+            margin: 20px 0 12px;
+            width: 100%;
+            box-sizing: border-box;
+            text-align: center;
+        }
+        .switcherText{
+            margin-right: auto;
+            font-size: 14px;
+            color: #7F8084;
+            span{
+                color: white;
+                text-transform: capitalize;
+                cursor: pointer;
+            }
+        }
+    }
 }
